securitygroup.yaml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  # VPC ID
  VPCId:
    Description: The ID of the VPC to be created.
    Type: AWS::EC2::VPC::Id

  # RDSのDBインスタンス識別子
  DBInstanceIdentifier:
    Description: The identifier of the DB instance to be created.
    Type: String
    MinLength: 1
    MaxLength: 60
    AllowedPattern: ^[a-zA-Z](?!.*--)[a-zA-Z0-9\-]*[a-zA-Z0-9]$

  # EC2のインスタンス名
  EC2InstanceName:
    Description: The name of the EC2 instance to be created.
    Type: String
    MaxLength: 253

Resources:
#----------------------------------------
# RDSのセキュリティグループ
#----------------------------------------
  MyDataBaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: test security group
      VpcId: !Ref VPCId

  #----------------------------------------
  # インバウンドルール
  #----------------------------------------
  MySQLInboundToDB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !Ref MyEC2SecurityGroup
      GroupId: !Ref MyDataBaseSecurityGroup

  SSHInboundToDB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      SourceSecurityGroupId: !Ref MyEC2SecurityGroup
      GroupId: !Ref MyDataBaseSecurityGroup

#----------------------------------------
# EC2のセキュリティグループ
#----------------------------------------
  MyEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: test security group
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  #----------------------------------------
  # アウトバウンドルール
  #----------------------------------------
  DataBaseOutboundfromEC2:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      DestinationSecurityGroupId: !Ref MyDataBaseSecurityGroup
      GroupId: !Ref MyEC2SecurityGroup

  SSHOutboundfromEC2:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      DestinationSecurityGroupId: !Ref MyDataBaseSecurityGroup
      GroupId: !Ref MyEC2SecurityGroup

Outputs:
  DataBaseSecurityGroupId:
    Value: !Ref MyDataBaseSecurityGroup
  EC2SecurityGroupId:
    Value: !Ref MyEC2SecurityGroup
